tests/errors/test_78.x
// No such libc variable

import std, io;

fn main() -> void {

	io::print(@what);

}
